mount writable volume
